Name:                   dynamic-pp
Category:               Text
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               A pretty-print library that employs a dynamic programming algorithm for optimal rendering.
Homepage:               https://github.com/emc2/dynamic-pp
Bug-Reports:            https://github.com/emc2/dynamic-pp/issues
Copyright:              Copyright (c) 2014 Eric McCorkle.  All rights reserved.
Description:
  This library provides pretty-print operators similar to the set provided by the Wadler-Leijin pretty-printer.
  The main difference, however, is that it utilizes a dynamic programming algorithm for rendering.  The effect is
  
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/dynamic-pp.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, hashable, bytestring,
                        utf8-string, blaze-builder, ansi-terminal, unordered-containers,
                        HUnit-Plus
  ghc-options:          -fhpc

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, hashable, bytestring,
                        utf8-string, blaze-builder, ansi-terminal, unordered-containers
  exposed-modules:      Text.Format
