Name:                   dynamic-pp
Category:               Text
Version:                0.5.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Alpha
Synopsis:               A pretty-print library that employs a dynamic programming algorithm for optimal rendering.
Homepage:               https://github.com/emc2/dynamic-pp
Bug-Reports:            https://github.com/emc2/dynamic-pp/issues
Copyright:              Copyright (c) 2015 Eric McCorkle.  All rights reserved.
Description:
  This library provides pretty-print operators similar to the set provided by the Wadler-Leijin pretty-printer.
  The main difference, however, is that it utilizes a dynamic programming algorithm for rendering.  This slightly
  reduces the available combinators, but provides a layout engine that optimizes documents, minimizing their
  over-wrap and line count.
  .
  The dynamic programming algorithm has pathological cases that cause it to run in polynomial time; however,
  typical use on code-like programs should see better run times.  In general, documents with many uses of the
  choose combinator will require more time to render.
  .
  The library also provides a greedy renderer which is equivalent to the typical Wadler-Leijin engine.  Two simple
  renderers are also provided for non-human-readable uses.
  .
  As of this time, the algorithm is asymptotically polynomial; however, the exponent is large enough to cause serious
  problems for deeply nested programs, making the optimal renderer impractical for these sorts of programs.  The greedy
  renderer is recommended for these cases.
  .
  NOTE: This library is still in development.  It may contain bugs, performance issues, and the interface may change.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/dynamic-pp.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, hashable, bytestring,
                        utf8-string, blaze-builder, ansi-terminal, unordered-containers,
                        HUnit-Plus

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, hashable, bytestring,
                        utf8-string, blaze-builder, ansi-terminal, unordered-containers
  exposed-modules:      Text.Format
